--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,10 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
+
+    /* Dagger2  */
+    implementation 'com.google.dagger:dagger-android:2.25.4'
+    implementation 'com.google.dagger:dagger-android-support:2.25.4'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.25.4'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.25.4'
 }
